--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-<nav class="nav-extended">
-  <div class="nav-wrapper db">
-    <ul class="right hide-on-med-and-down">
-      <li class="active"><a href="">Inicio</a></li>
-      <li><a href="">El Plan</a></li>
-      <li><a href="">Consejo</a></li>
-    </ul>
-  </div>
-</nav>
+<router-outlet></router-outlet>
