--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<nav class="nav-extended">
+<nav class="nav-extended main-background">
+
   <div class="nav-wrapper container">
     <ul class="right hide-on-med-and-down">
       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
@@ -11,5 +12,10 @@
         <a routerLink="/consejo">Consejo</a>
       </li>
     </ul>
+  </div>
+
+  <div class="nav-header center">
+    <h2>Espartales y Ciudad 10</h2>
+    <h5>El portal del Barrio</h5>
   </div>
 </nav>
