--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,1 +1,8 @@
+.main-background {
+  background-image: url('/assets/img/header-background.jpg');
+  background-size: cover;
+  background-color: gray;
+  background-blend-mode: multiply;
+  height: 15rem;
+}
 
