--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,37 @@
 <app-header></app-header>
 <div class="container">
-  <h1>Hola</h1>
+  <p>&nbsp;</p>
+  <div class="row">
+    <div class="col s4">
+      <app-social-card
+        image="https://external.fmad10-2.fna.fbcdn.net/safe_image.php?d=AQDenmQ_cRualbxD&w=500&h=261&url=https%3A%2F%2Fwww.dream-alcala.com%2Fwp-content%2Fuploads%2F2020%2F12%2Fespartales_unidos-10.jpg&cfs=1&ext=jpg&_nc_cb=1&_nc_hash=AQDHdl85ZOKcMwhQ"
+        text="En Espartales, pequeña muestra de las fiestas de Navidad, en el Centro Cultural la Galatea, para todos los públicos, con las medidas de control de seguridad sanitaria de distanciamiento, higiene de manos, mascarilla, etc."
+        ></app-social-card>
+      <app-social-card
+        image="https://scontent.fmad10-2.fna.fbcdn.net/v/t1.0-0/s600x600/130304601_3821529387877566_3454325331139390868_n.jpg?_nc_cat=108&ccb=2&_nc_sid=2c4854&_nc_ohc=XnBZmUMVt8oAX8UCpjS&_nc_ht=scontent.fmad10-2.fna&tp=7&oh=6ba10aa44edb409be84ce5720af5e45f&oe=5FFD9C4E"
+        text="Es mañana en el Galatea de Espartales....!!!anímate y participa !!! "
+        ></app-social-card>
+    </div>
+    <div class="col s4">
+      <app-social-card
+        image="https://external.fmad10-2.fna.fbcdn.net/safe_image.php?d=AQAsnNtj1XoIdVbc&w=500&h=261&url=https%3A%2F%2F1.bp.blogspot.com%2F-18BzYotauSc%2FX8t_1iAZkYI%2FAAAAAAAAEBI%2FG6PZR-sLzH8ZgxII2wFW1fnaNWFyLlo7ACNcBGAsYHQ%2Fw1200-h630-p-k-no-nu%2FIMG-20201128-WA0011.jpg&cfs=1&ext=jpg&_nc_cb=1&_nc_hash=AQA5TOwQF7cLfRRt"
+        text="Este sábado 28 tuvo lugar el encuentro de Espartales y Ciudad 10 sobre la Salud Pública. Por primera vez en Espartales conseguimos juntar a ciudadanía, instituciones y ciencia para trabajar en conjunto. También hicimos la presentación pública del Consejo y presentamos el nuevo Plan de Barrio, con el que queremos imaginar juntos el futuro que queremos construir."
+        ></app-social-card>
+      <app-social-card
+        image="https://scontent.fmad10-2.fna.fbcdn.net/v/t1.0-0/p526x296/129814866_3806528956044276_623679754528603570_o.jpg?_nc_cat=104&ccb=2&_nc_sid=2c4854&_nc_ohc=AdwyU2wbcCYAX8jveuG&_nc_ht=scontent.fmad10-2.fna&tp=6&oh=9a98e3a78caa5ecebd45776f7d8b2578&oe=5FFD0498"
+        text="Un poquito de humor y reconocimiento alcalaíno... "
+        ></app-social-card>
+    </div>
+    <div class="col s4">
+      <app-social-card
+        image="https://scontent.fmad10-2.fna.fbcdn.net/v/t1.0-0/s600x600/128549612_3797913903572448_3577691361126493987_n.jpg?_nc_cat=109&ccb=2&_nc_sid=730e14&_nc_ohc=iOc0uAkBbccAX-CXWAX&_nc_ht=scontent.fmad10-2.fna&tp=7&oh=e5c876e062ce8a9e2ad7b39b4e5caee9&oe=5FFDB605"
+        text="En Espartales, programa de Navidad, desde el 1 de diciembre al 8 de enero 2021, en el centro Cultural La Galatea, c/ Emilia Pardo Bazán.
+Podemos participar con la foto de nuestra mascota en navidad, ¡¡Envíala !! a la dirección del cartel o tráela al Galatea."
+        ></app-social-card>
+      <app-social-card
+        image="https://scontent.fmad10-2.fna.fbcdn.net/v/t1.0-0/s600x600/127242658_3786866908010481_3337906982234590827_o.jpg?_nc_cat=103&ccb=2&_nc_sid=730e14&_nc_ohc=qFYqDI4U2l8AX_Py-WB&_nc_ht=scontent.fmad10-2.fna&tp=7&oh=3915aa766650635afe6f0db945b5113d&oe=5FFD8752"
+        text="En Espartales, recogida de juguetes y material de higiene personal, en el centro Cultural La Galatea, c/ Emilia Pardo Bazán, ¡¡ colabora otr@s lo necesitan ¡¡                 Ver horarios en los carteles."
+        ></app-social-card>
+    </div>
+  </div>
 </div>
