--- a/src/app/social-card/social-card.component.html
+++ b/src/app/social-card/social-card.component.html
@@ -1,15 +1,33 @@
 <div class="card">
+
   <div class="card-content card-header">
-    <img src="https://scontent.fmad10-2.fna.fbcdn.net/v/t1.0-1/cp0/p40x40/12651169_1096637443700121_717760376049139568_n.png?_nc_cat=104&ccb=2&_nc_sid=1eb0c7&_nc_ohc=YOW2qNt8swsAX_Aogj0&_nc_ht=scontent.fmad10-2.fna&_nc_tp=30&oh=073e9a77f437be0ac8fc0beb9bebf9dd&oe=5FFBF98A" />
+    <a href="{{ item.network.url }}" target="_blank">
+      <img class="network-icon" src="{{ item.network.iconUrl }}" />
+    </a>
     <div class="header-data">
-      <div class="collective-name">Espartales Unidos</div>
-      <div class="post-date">13 diciembre 19:18h</div>
+      <div class="collective-name">
+        <a href="{{ item.network.url }}" target="_blank">
+          {{ item.entity.name }}
+        </a>
+      </div>
+      <div class="post-date">{{ item.post.date | date:'medium' }}</div>
     </div>
+    <img class="type-icon" src="/assets/img/facebook.png" />
   </div>
+
   <div class="card-image">
-    <img src="{{ image }}">
+    <a href="{{ item.post.url }}" target="_blank">
+      <img src="{{ item.post.imageUrl }}">
+    </a>
   </div>
+
   <div class="card-content">
-    <p>{{ text }}</p>
+    <a href="{{ item.post.url }}" target="_blank">
+      <p>{{ item.post.text }}</p>
+    </a>
+  </div>
+
+  <div class="card-action">
+    <a href="{{ item.post.url }}" target="_blank">Ver post</a>
   </div>
 </div>
