--- a/src/app/social-card/social-card.component.scss
+++ b/src/app/social-card/social-card.component.scss
@@ -2,16 +2,22 @@
   padding: 1rem;
   display: flex;
 
-  img {
+  .network-icon {
     width: 40px;
     height: 40px;
-    margin-right: 1rem;
+  }
+
+  .type-icon {
+    width: 30px;
+    height: 30px;
+    margin-left: auto;
   }
 }
 
 .header-data {
   display: flex;
   flex-direction: column;
+  margin-left: 1rem;
 
   .collective-name {
     font-size: 1rem;
