--- a/src/styles/materialize/components/_variables.scss
+++ b/src/styles/materialize/components/_variables.scss
@@ -41,7 +41,7 @@ $primary-color-dark: darken($primary-color, 15%) !default;
 $secondary-color: color("teal", "lighten-1") !default;
 $success-color: color("green", "base") !default;
 $error-color: color("red", "base") !default;
-$link-color: color("light-blue", "darken-1") !default;
+$link-color: rgba(0, 0, 0, 0.87) !default;
 
 
 // 2. Badges
