--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,13 @@
 <app-header></app-header>
 <div class="container">
-  <p>&nbsp;</p>
+  <div class="filter-status">
+    <a class="btn-flat">
+      <i class="material-icons">tune</i>
+    </a>
+    <div class="filter-summary">
+      Viendo: Todas las categorías
+    </div>
+  </div>
   <div class="row">
     <div class="col s4">
       <app-social-card
