--- a/frontend/src/app/social-card/social-card.component.html
+++ b/frontend/src/app/social-card/social-card.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="post-date">{{ item.post.date | date:'medium' }}</div>
     </div>
-    <img class="type-icon" src="/assets/img/facebook.png" />
+    <img class="type-icon" src="{{ typeIcon() }}" />
   </div>
 
   <div class="card-image">
@@ -23,7 +23,7 @@
 
   <div class="card-content">
     <a href="{{ item.post.url }}" target="_blank">
-      <p>{{ item.post.text }}</p>
+      <p>{{ item.post.text | striphtml }}</p>
     </a>
   </div>
 
