--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,14 +1,33 @@
 <app-header></app-header>
 <div class="container">
   <div class="filter-status">
-    <a class="btn-flat">
-      <i class="material-icons">tune</i>
-    </a>
     <div class="filter-summary">
       Viendo: Todas las categorías
     </div>
+    <a class="btn-flat">
+      <i class="material-icons">tune</i>
+    </a>
   </div>
-  <div class="row">
+
+  <ul class="tabs">
+    <li class="tab col s3">
+      <a [class.active]="currentTab === 1"
+        (click)="setTab(1)"
+        href="#">Muro</a>
+    </li>
+    <li class="tab col s3">
+      <a [class.active]="currentTab === 2"
+        (click)="setTab(2)"
+        href="#test1">Lista</a>
+    </li>
+    <li class="tab col s3">
+      <a [class.active]="currentTab === 3"
+        (click)="setTab(3)"
+        href="#test1">Mapa</a>
+    </li>
+  </ul>
+
+  <div class="row" *ngIf="currentTab === 1">
     <div class="col s4">
       <app-social-card
         *ngFor="let item of columns[0]"
@@ -28,4 +47,27 @@
       </app-social-card>
     </div>
   </div>
+
+  <div class="row" *ngIf="currentTab === 2">
+    <div class="col s8 offset-s2">
+      <ul class="collection">
+        <li class="collection-item avatar"
+          *ngFor="let entity of entities.allEntities$ | async">
+          <img src="{{ entity.imageUrl }}" alt="" class="circle">
+          <span class="title">{{ entity.name }}</span>
+          <p>{{ entity.description }}</p>
+          <div class="secondary-content">
+            <a href="#!"><i class="material-icons">grade</i></a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row" *ngIf="currentTab === 3">
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1dlXsMgTGktO12WMxnHpov0FNR4zmLRvV"
+      width="100%" height="800">
+    </iframe>
+  </div>
+
 </div>
