--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -13,18 +13,15 @@
   <ul class="tabs">
     <li class="tab col s3">
       <a [class.active]="currentTab === 1"
-        (click)="setTab(1)"
-        href="#">Muro</a>
+        (click)="setTab(1)">Muro</a>
     </li>
     <li class="tab col s3">
       <a [class.active]="currentTab === 2"
-        (click)="setTab(2)"
-        href="#test1">Lista</a>
+        (click)="setTab(2)">Lista</a>
     </li>
     <li class="tab col s3">
       <a [class.active]="currentTab === 3"
-        (click)="setTab(3)"
-        href="#test1">Mapa</a>
+        (click)="setTab(3)">Mapa</a>
     </li>
   </ul>
 
@@ -32,19 +29,19 @@
   </app-filter-panel>
 
   <div class="row" *ngIf="currentTab === 1">
-    <div class="col s4">
+    <div class="col s12 m6 l4">
       <app-social-card
         *ngFor="let item of columns[0]"
         [item]=item>
       </app-social-card>
     </div>
-    <div class="col s4">
+    <div class="col s12 m6 l4">
       <app-social-card
         *ngFor="let item of columns[1]"
         [item]=item>
       </app-social-card>
     </div>
-    <div class="col s4">
+    <div class="col s12 m6 l4">
       <app-social-card
         *ngFor="let item of columns[2]"
         [item]=item>
@@ -59,7 +56,7 @@
   </div>
 
   <div class="row" *ngIf="currentTab === 2">
-    <div class="col s8 offset-s2"
+    <div class="col s12 l10 offset-l1"
       *alias="entities.selectedEntities$ | async as selectedEntities">
       <!-- See https://github.com/angular/angular/issues/15280
            and https://www.npmjs.com/package/ngx-alias -->
@@ -77,7 +74,7 @@
           </div>
           <p>{{ entity.description }}</p>
           <div class="secondary-content favorite">
-            <a href="#!"><i class="material-icons">grade</i></a>
+            <a><i class="material-icons">grade</i></a>
           </div>
         </li>
       </ul>
