Fix filter buttons

--- a/frontend/src/app/filter-panel/filter-panel.component.html
+++ b/frontend/src/app/filter-panel/filter-panel.component.html
@@ -5,10 +5,10 @@
     {{ category.name }}
   </a>
   <div class="extra-buttons">
-    <a href="#" (click)="deselectAllCategories()">
+    <a class="btn-mini" (click)="deselectAllCategories()">
       <i class="material-icons">cancel</i>
     </a>
-    <a href="#" (click)="selectAllCategories()">
+    <a class="btn-mini" (click)="selectAllCategories()">
       <i class="material-icons">check_circle</i>
     </a>
   </div>
