--- a/frontend/src/app/filter-panel/filter-panel.component.scss
+++ b/frontend/src/app/filter-panel/filter-panel.component.scss
@@ -10,6 +10,10 @@
   margin: 0 calc(0.5rem + 4px) 0.5rem 0;
 }
 
+.btn-mini {
+  cursor: pointer;
+}
+
 .extra-buttons {
   position: absolute;
   right: 1rem;
