--- a/frontend/src/app/entity/entity.component.html
+++ b/frontend/src/app/entity/entity.component.html
@@ -12,29 +12,37 @@
   <div class="row">
 
     <div class="col s12 m6 info-block">
-      <img class="responsive-img" src="{{ entity.imageUrl }}" alt="" />
-      <p>{{ entity.description }}</p>
-      <div class="badge-block">
-        <span class="badge"
-          *ngFor="let category of entity.categories">
-          {{ category.name }}
-        </span>
+      <div class="row>">
+        <div class="col s12 m6">
+          <img class="responsive-img" src="{{ entity.imageUrl }}" alt="" />
+        </div>
       </div>
-      <div class="contact-block">
-        <a
-          class="contact"
-          href="mailto:{{ entity.email }}"
-          target="_blank">
-          <i class="material-icons">email</i>
-          <span>{{ entity.email }}</span>
-        </a>
-        <a
-          class="contact"
-          href="{{ entity.web }}"
-          target="_blank">
-          <i class="material-icons">public</i>
-          <span>{{ entity.web }}</span>
-        </a>
+      <div class="row">
+        <div class="col s12">
+          <p>{{ entity.description }}</p>
+          <div class="badge-block">
+            <span class="badge"
+              *ngFor="let category of entity.categories">
+              {{ category.name }}
+            </span>
+          </div>
+          <div class="contact-block">
+            <a
+              class="contact"
+              href="mailto:{{ entity.email }}"
+              target="_blank">
+              <i class="material-icons">email</i>
+              <span>{{ entity.email }}</span>
+            </a>
+            <a
+              class="contact"
+              href="{{ entity.web }}"
+              target="_blank">
+              <i class="material-icons">public</i>
+              <span>{{ entity.web }}</span>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
 
