Add static pages

--- a/frontend/src/app/council/council.component.html
+++ b/frontend/src/app/council/council.component.html
@@ -1,4 +1,61 @@
 <app-header></app-header>
 <div class="container">
   <h1>El Consejo de Barrio</h1>
+
+  <p>El Consejo de Barrio nº 10 de Alcalá de Henares es un espacio de
+  participación ciudadana creado para promover procesos y resolver cuestiones
+  de los barrios de Espartales y Ciudad 10.</p>
+
+  <div class="image-wrapper">
+    <img class="decorative-image-big" src="/assets/img/consejo.jpg" />
+  </div>
+
+  <p>Nuestro objetivo fundamental es conseguir unos barrios más habitables,
+  sostenibles y saludables, un punto de encuentro para mejorar la calidad de
+  vida de nuestra ciudad y aumentar la cohesión social.</p>
+
+  <p>En él hablamos de planes, proyectos y actuaciones que tienen lugar en
+  nuestros barrios. Finalmente, una vez acordado todo, se transmiten las
+  propuestas a los órganos pertinentes del Ayuntamiento para que den
+  respuesta.</p>
+
+  <img class="decorative-image right" src="/assets/img/team.svg" />
+
+  <h2>Grupos de trabajo</h2>
+
+  <p>El Consejo trata muchos temas, y para organizarnos mejor, y que cada
+  miembro pueda dedicarse a lo que más le interese, tenemos varios grupos de
+  trabajo autónomos, que se van creando o desmontando según van evolucionando
+  las necesidades.</p>
+
+  <dl>
+    <dt><strong>Grupo de comunicación</strong></dt>
+    <dd>Un equipo de "servicio" al resto del consejo, que se encarga de que los canales estén funcionando y los mensajes lleguen a su destino, y de crear canales de difusión con el exterior.<dd>
+  </dl>
+
+  <dl>
+    <dt><strong>Grupo de convivencia</strong></dt>
+    <dd>Grupo orientado a cuidar la convivencia vecinal en el barrio.</dd>
+  </dl>
+
+  <dl>
+    <dt><strong>Grupo de cultura y educación</strong></dt>
+    <dd>Grupo para promover actividades culturales y apoyar que todos los niños tengan acceso a una educación de calidad.</dd>
+  </dl>
+
+  <dl>
+    <dt><strong>Grupo de medio ambiente</strong></dt>
+    <dd>Grupo para cuidar el entorno natural del barrio y alrededores. Así como su infraestructura urbana y vial.</dd>
+  </dl>
+
+  <dl>
+    <dt><strong>Grupo de plan de barrio</strong></dt>
+    <dd>Grupo dedicado a la elaboración colectiva de un plan general para el barrio, con propuestas de acción comunitaria que favorezcan mejoras sociales, urbanísticas, de salud y medioambientales en nuestro entorno más cercano.</dd>
+  </dl>
+
+  <dl>
+    <dt><strong>Grupo de solidaridad vecinal</strong></dt>
+    <dd>Ante la crisis generada por el confinamiento del COVID-19, creamos este grupo para promover la solidaridad vecinal y crear una red de ayuda mutua (la “Tribu Espartales”).</dd>
+  </dl>
+
 </div>
