--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -11,10 +11,13 @@
         <a routerLink="/">Inicio</a>
       </li>
       <li routerLinkActive="active">
-        <a routerLink="/plan">El Plan</a>
+        <a routerLink="/pagina/barrio">Espartales</a>
       </li>
       <li routerLinkActive="active">
-        <a routerLink="/consejo">Consejo</a>
+        <a routerLink="/pagina/consejo">Consejo</a>
+      </li>
+      <li routerLinkActive="active">
+        <a routerLink="/pagina/plan">El Plan</a>
       </li>
     </ul>
   </div>
@@ -37,9 +40,12 @@
     <a routerLink="/">Inicio</a>
   </li>
   <li routerLinkActive="active">
-    <a routerLink="/plan">El Plan</a>
+    <a routerLink="/pagina/barrio">Espartales</a>
   </li>
   <li routerLinkActive="active">
-    <a routerLink="/consejo">Consejo</a>
+    <a routerLink="/pagina/consejo">Consejo</a>
+  </li>
+  <li routerLinkActive="active">
+    <a routerLink="/pagina/plan">El Plan</a>
   </li>
 </ul>
