--- a/frontend/src/app/plan/plan.component.html
+++ b/frontend/src/app/plan/plan.component.html
@@ -1,4 +1,54 @@
 <app-header></app-header>
 <div class="container">
-  <h1>El Plan de Barrio</h1>
+  <h1>Nuestros barrios ante la crisis</h1>
+
+  <p>En estos tiempos, la solidaridad es más importante que nunca. La pandemia
+  global, la crisis económica y el cambio climático presentan formidables retos
+  para los próximos años, y tendremos que ser fuertes como sociedad para
+  afrontarlos lo mejor posible.</p>
+
+  <img class="decorative-image right" src="/assets/img/plan.jpg" />
+
+  <p>Los barrios son una plataforma ideal para impulsar esta unión ciudadana,
+  por su cercanía y agilidad para movilizarse y abordar proyectos. En Espartales
+  y Ciudad 10 tenemos, desde hace años, un movimiento asociativo activo y
+  potente, con hitos importantes como el logro del Bachillerato de Ciencias en
+  el Instituto, la remodelación de la Plaza del Viento o la defensa del Parque
+  Camarmilla; espacios solidarios como la Tribu Espartales; o multitud de
+  actividades reivindicativas y culturales, como el Día de la Juventud o la
+  participación en las fiestas locales y de Navidad.</p>
+
+  <p>En particular, en este agitado año 2020 se ha constituido el Consejo de
+  Barrio, con la participación de asociaciones y colectivos, personas
+  individuales y la administración municipal. El Consejo aspira a ser el
+  paraguas que acoja la actividad de todos estos actores, la coordine y la
+  fomente, consiguiendo una unión más fuerte que la suma de cada proyecto
+  individual.</p>
+
+  <h2>Tenemos un plan</h2>
+
+  <p>Para responder a los retos mencionados más arriba, el Consejo ha decidido
+  abordar un “plan de barrio”. Un proyecto abierto y general, que realice un
+  diagnóstico de la situación actual del barrio (con sus puntos fuertes y sus
+  debilidades) y elabore una lista de propuestas y objetivos a medio y largo
+  plazo, con la colaboración de todas las entidades sociales y personas
+  particulares que se quieran sumar.</p>
+
+  <img class="decorative-image left" src="/assets/img/plan.svg" />
+
+  <p>El primer objetivo y más urgente, por motivos obvios, es potenciar la salud
+  comunitaria, protegernos lo mejor posible de la pandemia y de los efectos del
+  confinamiento y otras restricciones. Y más allá de los problemas inmediatos,
+  aspiramos a conseguir un barrio organizado y democrático, con vecinos
+  conscientes y “empoderados”, donde se cuida la salud, nos apoyamos mutuamente
+  y se busca el desarrollo económico, la igualdad de oportunidades y la
+  convivencia en un entorno más humano.</p>
+
+  <p>Tenemos ya una primera versión del plan. Ha sido elaborado por miembros
+  del Consejo, a partir de la experiencia de estos años de actividad, e
+  inspirado en el “Proyecto Patio” del colegio público Espartales. Pero no es
+  un plan cerrado, a partir de ahora lo exponemos a todas las vecinas y
+  vecinos del barrio, para seguir aportando e incorporando ideas y hacerlo más
+  representativo de los intereses de todo el mundo.</p>
+
 </div>
