--- a/frontend/src/app/council/council.component.scss
+++ b/frontend/src/app/council/council.component.scss
@@ -1,3 +1,5 @@
+@import "../../styles/styles";
+
 .image-wrapper {
   display: flex;
   justify-content: center;
@@ -17,5 +19,12 @@
 
   &.left {
     margin-right: 1rem;
+  }
+}
+
+@media #{$medium-and-down} {
+  .decorative-image,
+  .decorative-image-big {
+    max-width: 100%;
   }
 }
