--- a/frontend/src/app/neighborhood/neighborhood.component.scss
+++ b/frontend/src/app/neighborhood/neighborhood.component.scss
@@ -1,3 +1,5 @@
+@import "../../styles/styles";
+
 .decorative-image {
   max-width: 400px;
   margin-bottom: 1rem;
@@ -8,5 +10,11 @@
 
   &.left {
     margin-right: 1rem;
+  }
+}
+
+@media #{$medium-and-down} {
+  .decorative-image {
+    max-width: 100%;
   }
 }
