New entity option

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -48,4 +48,7 @@
   <li routerLinkActive="active">
     <a routerLink="/pagina/plan">El Plan</a>
   </li>
+  <li>
+    <a (click)="newEntity()">Añade tu entidad</a>
+  </li>
 </ul>
